[gd_scene load_steps=8 format=3 uid="uid://cfp6585xx6raj"]

[ext_resource type="Script" path="res://src/Scripts/Scenes/UI/SideTooltipUI.gd" id="1_rb8mo"]
[ext_resource type="FontFile" uid="uid://cqb5dwh0v5xxr" path="res://src/Assets/UI/PublicPixel (MainFont).ttf" id="2_y604w"]

[sub_resource type="LabelSettings" id="LabelSettings_a3awy"]
line_spacing = 8.0
font = ExtResource("2_y604w")
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_73vjt"]
line_spacing = 8.0
font = ExtResource("2_y604w")
font_size = 14

[sub_resource type="Animation" id="Animation_cmgys"]
resource_name = "IntroAnim"
length = 0.46667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BottomTooltipContainer/Margin/Text:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottomTooltipContainer/Margin/Text:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.46667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TopTooltipContainer/Margin/Text:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TopTooltipContainer/Margin/Text:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.46667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_y6vax"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BottomTooltipContainer/Margin/Text:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottomTooltipContainer/Margin/Text:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TopTooltipContainer/Margin/Text:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TopTooltipContainer/Margin/Text:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1myta"]
_data = {
"IntroAnim": SubResource("Animation_cmgys"),
"RESET": SubResource("Animation_y6vax")
}

[node name="SideTooltipUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rb8mo")

[node name="TopTooltipContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Margin" type="MarginContainer" parent="TopTooltipContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="Text" type="Label" parent="TopTooltipContainer/Margin"]
visible = false
layout_mode = 2
text = "THIS IS A PLACEHOLDER"
label_settings = SubResource("LabelSettings_a3awy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="BottomTooltipContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -53.0
grow_horizontal = 2
grow_vertical = 0

[node name="Margin" type="MarginContainer" parent="BottomTooltipContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="Text" type="Label" parent="BottomTooltipContainer/Margin"]
visible = false
layout_mode = 2
text = "THIS IS A PLACEHOLDER"
label_settings = SubResource("LabelSettings_73vjt")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1myta")
}
